--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="20" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     
     <application
         android:name="classes.ReimApplication"
@@ -18,34 +19,34 @@
         android:theme="@style/AppTheme" >
         
         <activity 
-            android:name=".SplashActivity"
+            android:name="com.rushucloud.reim.start.SplashActivity"
             android:label="@string/app_name"
 	        android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
         <activity 
-            android:name=".WelcomeActivity"
+            android:name="com.rushucloud.reim.start.WelcomeActivity"
             android:label="@string/app_name"
 	        android:theme="@android:style/Theme.NoTitleBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         
         <activity 
-            android:name=".SignInActivity"
+ 			android:name="com.rushucloud.reim.start.SignInActivity"
             android:label="@string/app_name" >
         </activity>
         
         <activity 
-            android:name=".SignUpActivity"
+            android:name="com.rushucloud.reim.start.SignUpActivity"
             android:label="@string/app_name" >
         </activity>
         
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
     
