--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,10 +28,6 @@
             android:name="com.rushucloud.reim.start.WelcomeActivity"
             android:label="@string/app_name"
 	        android:theme="@android:style/Theme.NoTitleBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         
         <activity 
@@ -44,9 +40,18 @@
             android:label="@string/app_name" >
         </activity>
         
+        <activity 
+            android:name="com.rushucloud.reim.start.ForgotPasswordActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
     
