--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,12 @@
         </activity>
         
         <activity 
+            android:name="com.rushucloud.reim.start.NewFeaturesActivity"
+            android:label="@string/app_name"
+	        android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
+        
+        <activity 
             android:name="com.rushucloud.reim.start.WelcomeActivity"
             android:label="@string/app_name"
 	        android:theme="@android:style/Theme.NoTitleBar" >
@@ -33,6 +39,10 @@
         <activity 
  			android:name="com.rushucloud.reim.start.SignInActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         
         <activity 
@@ -48,10 +58,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
     
