--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,11 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="11"
         android:targetSdkVersion="20" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     
     <application
         android:name="classes.ReimApplication"
@@ -39,10 +41,6 @@
         <activity 
  			android:name="com.rushucloud.reim.start.SignInActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         
         <activity 
@@ -55,10 +53,35 @@
             android:label="@string/app_name" >
         </activity>
         
-        <activity
-            android:name=".MainActivity"
+        <activity 
+            android:name="com.rushucloud.reim.start.ResetPasswordActivity"
             android:label="@string/app_name" >
         </activity>
+        
+        <activity
+            android:name="com.rushucloud.reim.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.rushucloud.reim.EditItemActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.rushucloud.reim.EditReportActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.rushucloud.reim.ImageActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
     </application>
     
 </manifest>
