--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -92,6 +92,16 @@
             android:label="@string/app_name" >
         </activity>
         
+        <activity
+            android:name="com.rushucloud.reim.ProfileActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="com.rushucloud.reim.ChangePasswordActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
     </application>
     
 </manifest>
