--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:targetSdkVersion="20" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>	    
@@ -109,17 +111,17 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.ProfileActivity">
+            android:name="com.rushucloud.reim.me.ProfileActivity">
         </activity>
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.ChangePasswordActivity">
+            android:name="com.rushucloud.reim.me.ChangePasswordActivity">
         </activity>
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.FeedbackActivity">
+            android:name="com.rushucloud.reim.me.FeedbackActivityity">
         </activity>
         
         <!-- #######################  友盟UmengAppkey  ####################### -->
@@ -179,5 +181,14 @@
 		    android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
         
+        <service android:name="com.avos.avoscloud.PushService"/>
+        <receiver android:name="classes.ReimBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="com.avos.UPDATE_STATUS" />
+            </intent-filter>
+        </receiver>
 	</application>
 </manifest>
