--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,10 +36,6 @@
             android:label="@string/app_name" 
             android:name="com.rushucloud.reim.start.SplashActivity" 
             android:theme="@android:style/Theme.NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>       
         </activity>
         
         <activity 
@@ -57,6 +53,10 @@
         <activity 
             android:label="@string/app_name" 
             android:name="com.rushucloud.reim.start.SignInActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>       
         </activity>
         
         <activity 
@@ -187,6 +187,7 @@
 		    android:theme="@android:style/Theme.Translucent.NoTitleBar">
         </activity>
         
+		<!-- ################### 推送 ################### -->
         <service android:name="com.avos.avoscloud.PushService"/>
         <receiver 
             android:name="classes.ReimBroadcastReceiver">
@@ -195,6 +196,7 @@
                 <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="com.avos.UPDATE_STATUS" />
+                <action android:name="com.rushucloud.reim.NOTIFICATION_CLICKED" />
             </intent-filter>
         </receiver>
 	</application>
