--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -121,7 +121,27 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.FeedbackActivityity">
+            android:name="com.rushucloud.reim.me.FeedbackActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.me.DefaultManagerActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.me.CategoryActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/subCategory" 
+            android:name="com.rushucloud.reim.me.SubCategoryActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.me.TagActivity">
         </activity>
         
         <!-- #######################  友盟UmengAppkey  ####################### -->
