--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,6 +53,10 @@
         <activity 
             android:label="@string/app_name" 
             android:name="com.rushucloud.reim.start.SignInActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>       
         </activity>
         
         <activity 
@@ -78,10 +82,6 @@
         <activity 
             android:label="@string/app_name" 
             android:name="com.rushucloud.reim.EditItemActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>       
         </activity>
         
         <activity 
@@ -197,7 +197,7 @@
 				<action android:name="android.intent.action.VIEW"/>
 				<category android:name="android.intent.category.DEFAULT"/>
 				<category android:name="android.intent.category.BROWSABLE"/>
-				<data android:scheme="tencent添加你的App Id"/>
+				<data android:scheme="tencent1103305832"/>
 			</intent-filter>
 		</activity>
 
