--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -144,6 +144,11 @@
             android:name="com.rushucloud.reim.me.TagActivity">
         </activity>
         
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.me.InvitedActivity">
+        </activity>
+        
         <!-- #######################  友盟UmengAppkey  ####################### -->
 	    <meta-data
 	        android:name="UMENG_APPKEY" 
