--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -75,7 +75,7 @@
         </activity>
         
         <activity 
-            android:label="@string/app_name" 
+            android:label="@string/nullString"
             android:name="com.rushucloud.reim.MainActivity">          
         </activity>
         
