--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -101,6 +101,16 @@
         
         <activity 
             android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.ApproveReportActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.ShowReportActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
             android:name="com.rushucloud.reim.UnarchivedItemsActivity">
         </activity>
         
