--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" 
     package="com.rushucloud.reim">
 
-    <uses-sdk 
+    <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="20" />
 
@@ -24,6 +24,9 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+	<uses-permission android:name="android.permission.READ_LOGS"></uses-permission>
     
     <application 
         android:allowBackup="true" 
@@ -239,5 +242,12 @@
                 <action android:name="com.rushucloud.reim.NOTIFICATION_CLICKED" />
             </intent-filter>
         </receiver>
+        
+        <!-- ################### 百度定位 ################## -->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="isVHfH894tfsLVOVdXlGdlKz" />
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote" />
+        
 	</application>
 </manifest>
