--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -190,11 +190,11 @@
         </activity>
         
 		<activity 
-		    android:configChanges="keyboardHidden|orientation|screenSize" 
-		    android:exported="true" 
-		    android:name=".wxapi.WXEntryActivity" 
-		    android:screenOrientation="portrait" 
-		    android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+		    android:name=".wxapi.WXEntryActivity"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:exported="true"
+			android:screenOrientation="portrait" >
         </activity>
         
 		<activity 
