--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -235,5 +235,16 @@
             android:value="isVHfH894tfsLVOVdXlGdlKz" />
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote" />
         
+        <!-- #################### 美洽 ################### -->
+		<activity
+		    android:name="com.mechat.mechatlibrary.ui.ConversationActivity"
+		    android:theme="@android:style/Theme.Light"
+		    android:launchMode="singleTask"/>
+		<activity android:name="com.mechat.mechatlibrary.ui.ZoomImageActivity"/>
+		
+		<service
+		    android:name="com.mechat.mechatlibrary.MechatService"
+		    android:label="MechatService" >
+		</service>
 	</application>
 </manifest>
