--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -114,6 +114,11 @@
         
         <activity 
             android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.CommentActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
             android:name="com.rushucloud.reim.UnarchivedItemsActivity">
         </activity>
         
