remove crop image

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -124,7 +124,8 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.ImageActivity">
+            android:name="com.rushucloud.reim.ImageActivity"
+            android:theme="@android:style/Theme.NoTitleBar">
         </activity>
         
         <activity 
