--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,7 +99,8 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.EditReportActivity">
+            android:name="com.rushucloud.reim.EditReportActivity"
+            android:windowSoftInputMode="adjustPan">            
         </activity>
         
         <activity 
