--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,12 +59,14 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.SignInActivity"> 
+            android:name="com.rushucloud.reim.start.SignInActivity"
+            android:theme="@android:style/Theme.NoTitleBar"> 
         </activity>
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.SignUpActivity">
+            android:name="com.rushucloud.reim.start.SignUpActivity"
+            android:theme="@android:style/Theme.NoTitleBar"> 
         </activity>
         
         <activity 
