--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     package="com.rushucloud.reim">
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -81,7 +81,8 @@
         
         <activity 
             android:label="@string/nullString"
-            android:name="com.rushucloud.reim.MainActivity">          
+            android:name="com.rushucloud.reim.MainActivity"
+            android:theme="@android:style/Theme.NoTitleBar">          
         </activity>
         
         <activity 
