--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,9 +80,8 @@
         </activity>
         
         <activity 
-            android:label="@string/nullString"
-            android:name="com.rushucloud.reim.MainActivity"
-            android:theme="@android:style/Theme.NoTitleBar">          
+            android:label="@string/app_name"
+            android:name="com.rushucloud.reim.MainActivity">          
         </activity>
         
         <activity 
