--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,8 +61,12 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.SignUpActivity"
-            android:theme="@android:style/Theme.NoTitleBar"> 
+            android:name="com.rushucloud.reim.start.PhoneSignUpActivity" > 
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.start.EmailSignUpActivity" > 
         </activity>
         
         <activity 
@@ -97,8 +101,7 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.EditReportActivity"
-            android:windowSoftInputMode="adjustPan" >            
+            android:name="com.rushucloud.reim.EditReportActivity" >            
         </activity>
         
         <activity 
@@ -123,8 +126,7 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.ImageActivity"
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:name="com.rushucloud.reim.ImageActivity" >
         </activity>
         
         <activity 
