fix bugs of edittext

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>      
+            </intent-filter>
         </activity>
         
         <activity 
@@ -71,7 +71,12 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.ForgotPasswordActivity">
+            android:name="com.rushucloud.reim.start.PhoneFindActivity">
+        </activity>
+        
+        <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.start.EmailFindActivity">
         </activity>
         
         <activity 
