--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -85,6 +85,11 @@
         </activity>
         
         <activity 
+            android:label="@string/app_name" 
+            android:name="com.rushucloud.reim.start.CompleteInfoActivity">
+        </activity>
+        
+        <activity 
             android:label="@string/app_name"
             android:name="com.rushucloud.reim.MainActivity">          
         </activity>
