--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:versionCode="1" 
-    android:versionName="0.2" 
+    android:versionName="0.2.1" 
     package="com.rushucloud.reim">
 
     <uses-sdk
@@ -106,7 +106,7 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.item.SearchItemActivityivity">
+            android:name="com.rushucloud.reim.item.SearchItemActivity">
         </activity>
         
         <activity 
@@ -126,7 +126,7 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.CommentActivityctivity">
+            android:name="com.rushucloud.reim.report.CommentActivity">
         </activity>
         
         <activity 
