modify ui of report and message

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -186,7 +186,7 @@
         
         <activity 
             android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.InviteReplyActivity">
+            android:name="com.rushucloud.reim.me.MessageDetailActivity">
         </activity>
         
         <activity 
