--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:versionCode="1" 
-    android:versionName="0.2.1" 
+    android:versionName="0.2.2" 
     package="com.rushucloud.reim">
 
     <uses-sdk
@@ -32,7 +32,7 @@
         android:allowBackup="true" 
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
-        android:name="classes.Utils.ReimApplication" 
+        android:name="classes.ReimApplication" 
         android:theme="@style/AppTheme">
         
         <activity 
