--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -91,7 +91,8 @@
         
         <activity 
             android:label="@string/app_name"
-            android:name="com.rushucloud.reim.MainActivity">          
+            android:name="com.rushucloud.reim.MainActivity"
+            android:launchMode="singleTop">          
         </activity>
         
         <activity 
