--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,180 +36,52 @@
         android:name="classes.ReimApplication" 
         android:theme="@style/AppTheme" >
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.SplashActivity" >
+        <activity android:name="com.rushucloud.reim.start.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.NewFeaturesActivity" >
-        </activity>
+        <activity android:name="com.rushucloud.reim.start.NewFeaturesActivity" />
+        <activity android:name="com.rushucloud.reim.start.WelcomeActivity" />
+        <activity android:name="com.rushucloud.reim.start.SignInActivity" />
+        <activity android:name="com.rushucloud.reim.start.PhoneSignUpActivity" />
+        <activity android:name="com.rushucloud.reim.start.EmailSignUpActivity" />
+        <activity android:name="com.rushucloud.reim.start.PhoneFindActivity" />
+        <activity android:name="com.rushucloud.reim.start.EmailFindActivity" />
+        <activity android:name="com.rushucloud.reim.start.ResetPasswordActivity" />
+        <activity android:name="com.rushucloud.reim.start.CompleteInfoActivity" />
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.WelcomeActivity" >
-        </activity>
+        <activity android:name="com.rushucloud.reim.MainActivity" android:launchMode="singleTop" />
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.SignInActivity" > 
-        </activity>
+        <activity android:name="com.rushucloud.reim.GalleryActivity" />
+        <activity android:name="com.rushucloud.reim.ImageActivity" />
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.PhoneSignUpActivity" > 
-        </activity>
+        <activity android:name="com.rushucloud.reim.item.EditItemActivity" />
+        <activity android:name="com.rushucloud.reim.item.ShowItemActivity" />
+        <activity android:name="com.rushucloud.reim.item.SearchItemActivity" />
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.EmailSignUpActivity" > 
-        </activity>
+        <activity android:name="com.rushucloud.reim.report.EditReportActivity" />
+        <activity android:name="com.rushucloud.reim.report.ApproveReportActivity" />
+        <activity android:name="com.rushucloud.reim.report.ShowReportActivity" />        
+        <activity android:name="com.rushucloud.reim.report.CommentActivity" />
+        <activity android:name="com.rushucloud.reim.report.UnarchivedItemsActivity" />
+        <activity android:name="com.rushucloud.reim.report.ApproveInfoActivity" />
         
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.PhoneFindActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.EmailFindActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.ResetPasswordActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.start.CompleteInfoActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name"
-            android:name="com.rushucloud.reim.MainActivity"
-            android:launchMode="singleTop" >          
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.item.EditItemActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.item.ShowItemActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.item.SearchItemActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.EditReportActivity" >            
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.ApproveReportActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.ShowReportActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.CommentActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.UnarchivedItemsActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.report.ApproveInfoActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.ImageActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.ProfileActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.InvoiceTitleActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.ChangePasswordActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.ManagerActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.CategoryActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/sub_category" 
-            android:name="com.rushucloud.reim.me.SubCategoryActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.TagActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.SendInviteActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.MessageActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.MessageDetailActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.SettingsActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.AboutActivity" >
-        </activity>
-        
-        <activity 
-            android:label="@string/app_name" 
-            android:name="com.rushucloud.reim.me.FeedbackActivity" >
-        </activity>
+        <activity android:name="com.rushucloud.reim.me.ProfileActivity" />
+        <activity android:name="com.rushucloud.reim.me.InvoiceTitleActivity" />
+        <activity android:name="com.rushucloud.reim.me.ChangePasswordActivity" />        
+        <activity android:name="com.rushucloud.reim.me.ManagerActivity" />        
+        <activity android:name="com.rushucloud.reim.me.CategoryActivity" />
+        <activity android:name="com.rushucloud.reim.me.SubCategoryActivity" />
+        <activity android:name="com.rushucloud.reim.me.TagActivity" />        
+        <activity android:name="com.rushucloud.reim.me.SendInviteActivity" />        
+        <activity android:name="com.rushucloud.reim.me.MessageActivity" />
+        <activity android:name="com.rushucloud.reim.me.MessageDetailActivity" />
+        <activity android:name="com.rushucloud.reim.me.SettingsActivity" />        
+        <activity android:name="com.rushucloud.reim.me.AboutActivity" />
+        <activity android:name="com.rushucloud.reim.me.FeedbackActivity" />
         
         <!-- #######################  友盟UmengAppkey  ####################### -->
 	    <meta-data
