--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_3.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/umeng-analytics-v5.4.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
