modify class path

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/locSDK_4.2.jar"/>
@@ -10,8 +12,6 @@
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_1.jar"/>
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_2.jar"/>
 	<classpathentry kind="lib" path="libs/SocialSDK_QQZone_3.jar"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="libs/umeng-analytics-v5.4.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
