--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,8 @@
     <application 
         android:allowBackup="true" 
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" 
+        android:label="@string/app_name"
+        android:largeHeap="true"
         android:name="classes.ReimApplication" 
         android:theme="@style/AppTheme" >
         
@@ -62,8 +63,15 @@
         <activity android:name="com.rushucloud.reim.item.EditItemActivity" />
         <activity android:name="com.rushucloud.reim.item.ShowItemActivity" />
         <activity android:name="com.rushucloud.reim.item.SearchItemActivity" />
+        <activity android:name="com.rushucloud.reim.item.PickVendorActivity" />
+        <activity android:name="com.rushucloud.reim.item.PickLocationActivity" />
+        <activity android:name="com.rushucloud.reim.item.PickCategoryActivity" />
+        <activity android:name="com.rushucloud.reim.item.PickTagActivity" />
+        <activity android:name="com.rushucloud.reim.item.PickMemberActivity" />
         
         <activity android:name="com.rushucloud.reim.report.EditReportActivity" />
+        <activity android:name="com.rushucloud.reim.report.PickManagerActivity" />
+        <activity android:name="com.rushucloud.reim.report.PickCCActivity" />
         <activity android:name="com.rushucloud.reim.report.ApproveReportActivity" />
         <activity android:name="com.rushucloud.reim.report.ShowReportActivity" />        
         <activity android:name="com.rushucloud.reim.report.CommentActivity" />
@@ -71,12 +79,17 @@
         <activity android:name="com.rushucloud.reim.report.ApproveInfoActivity" />
         
         <activity android:name="com.rushucloud.reim.me.ProfileActivity" />
+        <activity android:name="com.rushucloud.reim.me.EmailActivity" />
+        <activity android:name="com.rushucloud.reim.me.PhoneActivity" />
+        <activity android:name="com.rushucloud.reim.me.NicknameActivity" />
         <activity android:name="com.rushucloud.reim.me.InvoiceTitleActivity" />
         <activity android:name="com.rushucloud.reim.me.ChangePasswordActivity" />        
         <activity android:name="com.rushucloud.reim.me.ManagerActivity" />        
         <activity android:name="com.rushucloud.reim.me.CategoryActivity" />
         <activity android:name="com.rushucloud.reim.me.SubCategoryActivity" />
-        <activity android:name="com.rushucloud.reim.me.TagActivity" />        
+        <activity android:name="com.rushucloud.reim.me.EditCategoryActivity" />
+        <activity android:name="com.rushucloud.reim.me.TagActivity" />
+        <activity android:name="com.rushucloud.reim.me.EditTagActivity" />
         <activity android:name="com.rushucloud.reim.me.SendInviteActivity" />        
         <activity android:name="com.rushucloud.reim.me.MessageActivity" />
         <activity android:name="com.rushucloud.reim.me.MessageDetailActivity" />
