--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
     android:versionCode="1" 
-    android:versionName="0.6" 
+    android:versionName="0.7"
     package="com.rushucloud.reim" >
 
     <uses-sdk
@@ -135,7 +135,8 @@
         <activity
             android:name=".item.PickMemberActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
 
         <!--   report part   -->
         <activity
@@ -145,11 +146,13 @@
         <activity
             android:name=".report.PickManagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".report.PickCCActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".report.ApproveReportActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -207,7 +210,8 @@
         <activity
             android:name=".me.ManagerActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".me.CategoryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
